# perf

./: .ghci  .gitignore  .hlint.yaml  .travis.yml  .weeder.yaml  ChangeLog.md  LICENSE  cabal.project  criterion.md  haskell-ci.config  hie.yaml  index.html  package.yaml  perf.cabal  perf.org  readme.lhs  readme.md  readme.org  stack.yaml
.github/workflows/: haskell-ci.yml
app/: basic  basic.hi  basic.hs  bench.hs  explore.hs  inlines.hs  moduled.hs  others.hs  perf-examples.hs  perf-unsnoc.hs  recursion.hs  space.hs  tasty.hs  ticksi  ticksi.hi  ticksi.hs
examples/: bench.md  examples.hs  examples.lhs  summing.lhs
other/: ExampleSum-1000-1000-MeasureTime-StatAverage.perf  RunExample-1000-1000-MeasureTime-StatAverage.perf  RunExample-1000-1000-MeasureTime.csv  RunExample-1000-1000-MeasureTime.perf  RunExample-ExampleNoOp-1000-1000-MeasureTime-StatAverage.perf  RunExample-ExampleSum-1000-1000-MeasureTime-StatAverage.perf  RunExample-ExampleSum-100000-10-MeasureSpace-StatAverage.perf  RunExample.csv  RunExampleIO-1000-1000-MeasureTime.csv  RunExampleIO-MeasureTime-StatAverage.perf  RunExampleIO.csv  RunExamples-1000-1000-MeasureTime-StatAverage.perf  RunExamples.csv  RunLengths-MeasureTime-1000-1000-StatAverage.perf  RunNoOps-MeasureTime-1000.perf  RunNub-1000-MeasureTime-StatAverage.perf  RunSums-MeasureTime-1000-1000-StatAverage.perf  a.md  b.md  benchark.md  criterion.md  example1.csv  f.md  gexample1.csv  golden.csv  mutable.md  noop.map  onetick.md  perf-criterion.md  perf-examples.md  perf.map  perf0.raw  perf1.raw  quantiles.md  readme_.md  space.raw  spin.md  tick'.md  tickn.md  tickprimes.md  (+3 more)
perf/: package.yaml  perf.cabal  stack.yaml
perf-analysis/: package.yaml  perf-analysis.cabal  stack.yaml
perf-analysis/examples/: bench.md  examples.hs  simplest.hs
perf-analysis/other/: lhs.css
perf-analysis/src/Perf/: Analysis.hs
perf-core/: CHANGELOG.md  README.md  package.yaml
perf-core/src/: Perf.hs
perf-core/src/Perf/: Cycle.hs  Measure.hs
perf-core/test/: LibSpec.hs
perf-criterion/: LICENSE  fibber.html  package.yaml  perf-criterion.cabal  readme.md  stack.yaml
perf-criterion/app/: perf-criterion.lhs
perf-criterion/other/: answer.md  readme_.md
perf-criterion/src/Perf/: Criterion.hs
perf-criterion/test/: test.hs
perf-examples/: perf-examples.cabal
perf-examples/examples/: perf-criterion.hs  perf-criterion.md  perf-examples.md
perf/src/: Perf.hs
perf/src/Perf/: Cycle.hs  Measure.hs
perf/test/: test.hs
src/: Perf.hs
src/Perf/: Algos.hs  BigO.hs  Chart.hs  Count.hs  Cycle.hs  Cycles.hs  Degrade.hs  Measure.hs  Quantiles.hs  Report.hs  Space.hs  Stats.hs  Tick.hs  Time.hs  Types.hs
test/: test.hs
