cabal-version: 3.0
name: perf
version: 0.15.0.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2018
category: performance
author: Tony Day, Marco Zocca
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/perf#readme
bug-reports: https://github.com/tonyday567/perf/issues
synopsis: Performance tools
description:
  A set of tools to measure performance of Haskell programs.
  See the Perf module and readme for an example and full API documentation.

build-type: Simple
tested-with:
  ghc ==9.10.3
  ghc ==9.12.2
  ghc ==9.14.1

extra-doc-files:
  ChangeLog.md
  readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/perf

common ghc-options-exe-stanza
  ghc-options:
    -fforce-recomp
    -funbox-strict-fields
    -rtsopts
    -threaded
    -with-rtsopts=-N

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fproc-alignment=64


library
  import: ghc-options-stanza
  default-language: GHC2024
  hs-source-dirs: src
  build-depends:
    base >=4.14 && <5,
    clock >=0.8 && <0.9,
    containers >=0.6 && <0.9,
    deepseq >=1.4.4 && <1.6,
    formatn >=0.2.1 && <0.4,
    mtl >=2.2.2 && <2.4,
    numhask-space >=0.10 && <0.14,
    optics-core >=0.4.1 && <0.5,
    optparse-applicative >=0.17 && <0.20,
    prettyprinter >=1.7.1 && <1.8,
    text >=1.2 && <2.2,
    vector >=0.12.3 && <0.14,

  exposed-modules:
    Perf
    Perf.BigO
    Perf.Count
    Perf.Measure
    Perf.Report
    Perf.Space
    Perf.Stats
    Perf.Time
    Perf.Types

  ghc-options: -O2

executable perf-explore
  import: ghc-options-exe-stanza
  import: ghc-options-stanza
  default-language: GHC2024
  main-is: explore.hs
  hs-source-dirs: app
  build-depends:
    base >=4.14 && <5,
    optics-core >=0.4.1 && <0.5,
    optparse-applicative >=0.17 && <0.20,
    perf,

  ghc-options: -O2

