cabal-version:  3.0
name:           perf-analysis
version:        0.3.0
synopsis:       analysis example using perf
description:     Analytical tools to use with perf. 
category:       performance
homepage:       https://github.com/tonyday567/perf#readme
bug-reports:    https://github.com/tonyday567/perf/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/tonyday567/perf
  subdir: perf-analysis

library
  exposed-modules:
      Perf.Analysis
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , perf >=0.4.1.0 && < 0.7
    , protolude >= 0.3 && < 0.4
    , scientific
    , tdigest
    , text
    , text-format
    , readme-lhs >= 0.6 && < 0.7
  default-language: Haskell2010

executable perf-examples
  main-is: examples.hs
  hs-source-dirs:
      examples
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -rtsopts -O2
  build-depends:
      base >=4.7 && <5
    , containers
    , deepseq
    , optparse-generic
    , perf
    , perf-analysis
    , protolude >= 0.3 && < 0.4
    , text
    , vector
    , readme-lhs >= 0.6 && < 0.7
  default-language: Haskell2010
