name:           perf-criterion
version:        0.0.0.1
synopsis:       See readme.md
description:    See readme.md for description.
category:       project
homepage:       https://github.com/tonyday567/perf-criterion#readme
bug-reports:    https://github.com/tonyday567/perf-criterion/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day (c) 2017
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version: 2.0

source-repository head
  type: git
  location: https://github.com/tonyday567/perf-criterion

library
  exposed-modules:
      Perf.Criterion
  hs-source-dirs:
      src
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  build-depends:
      base >=4.7 && <5
    , containers
    , criterion
    , criterion-measurement
    , deepseq
    , formatting
    , perf
    , perf-analysis
    , scientific
    , text
    , readme-lhs
  default-language: Haskell2010

executable perf-criterion
  main-is: perf-criterion.lhs
  hs-source-dirs:
      app
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , criterion
    , criterion-measurement
    , deepseq
    , formatting
    , optparse-generic
    , perf
    , perf-analysis
    , perf-criterion
    , protolude
    , scientific
    , text
    , readme-lhs
  default-language: Haskell2010
