cabal-version:  2.4
name:           perf-examples
version:        0.0.1
synopsis:       Analysis examples using perf
description:    Analysis examples using perf. 
category:       performance
homepage:       https://github.com/tonyday567/perf#readme
bug-reports:    https://github.com/tonyday567/perf/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

executable perf-examples
  main-is: perf-examples.hs
  hs-source-dirs:
    examples
  build-depends:
    base >=4.7 && <5,
    containers >= 0.6,
    deepseq >= 1.4,
    numhask-prelude >= 0.6,
    optparse-generic >= 1.3,
    perf,
    readme-lhs >= 0.7,
    text >= 1.2,
    vector >= 0.12
  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

executable perf-criterion
  main-is: perf-criterion.hs
  hs-source-dirs:
    examples
  default-extensions: NegativeLiterals NoImplicitPrelude OverloadedStrings UnicodeSyntax
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5,
    criterion >= 1.5,
    criterion-measurement >= 0.1,
    numhask-prelude >= 0.6,
    perf,
    readme-lhs >= 0.7
  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints