name:           perf
version:        0.5.0.0
synopsis:       Low-level run time measurement.
description:     A set of tools to accurately measure time performance of Haskell programs.
                perf aims to be lightweight by having minimal dependencies on standard libraries.
                See the Perf module for an example and full API documentation. 
category:       project
homepage:       https://github.com/tonyday567/perf#readme
bug-reports:    https://github.com/tonyday567/perf/issues
author:         Tony Day, Marco Zocca
maintainer:     tonyday567@gmail.com
copyright:      Tony Day
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
cabal-version: 2.0

source-repository head
  type: git
  location: https://github.com/tonyday567/perf

library
  exposed-modules:
      Perf
      Perf.Measure
      Perf.Cycle
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , deepseq
    , foldl
    , rdtsc
    , text
    , time
    , transformers
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , doctest
  default-language: Haskell2010
