cabal-version:  2.4
name:           perf
version:        0.7.0
synopsis:       Low-level run time measurement.
description:     A set of tools to accurately measure time performance of Haskell programs.
                perf aims to be lightweight by having minimal dependencies on standard libraries.
                See the Perf module for an example and full API documentation. 
category:       project
homepage:       https://github.com/tonyday567/perf#readme
bug-reports:    https://github.com/tonyday567/perf/issues
author:         Tony Day, Marco Zocca
maintainer:     tonyday567@gmail.com
copyright:      Tony Day
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/tonyday567/perf

library
  exposed-modules:
      Perf
      Perf.Measure
      Perf.Cycle
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
    base >=4.7 && <5,
    containers >= 0.6,
    deepseq >= 1.4,
    foldl >= 1.4,
    rdtsc >= 1.3,
    text >= 1.2,
    time >= 1.9,
    transformers >= 0.5
  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
    test
  build-depends:
    base >=4.7 && <5,
    deepseq >= 1.4,
    doctest >= 0.16,
    perf,
    rdtsc >= 1.3
  default-language: Haskell2010
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
